# sbg_driver

./: .clang-tidy  .editorconfig  .gitignore  CMakePresets.json  LICENSE  PROGRESS.md  README.md  reference.repos
.github/workflows/: ci.yml
docker/: .devcontainer.json  Dockerfile.ci  Dockerfile.dev  Dockerfile.runtime  README.md
docker/compose/: compose.dev.yaml  compose.hil.yaml  compose.replay.yaml
docker/entrypoints/: healthcheck.sh  ros-entrypoint.sh
docker/udev/: 99-sbg.rules
src/sbg_driver/: CMakeLists.txt  package.xml
src/sbg_driver/config/: replay.example.yaml  serial.example.yaml
src/sbg_driver/include/sbg_driver/: conversions.hpp  driver_node.hpp  publishers.hpp  version.hpp
src/sbg_driver/launch/: replay.launch.py
src/sbg_driver/params/: sbg_driver_params.yaml
src/sbg_driver/src/: conversions.cpp  driver_node.cpp  main.cpp  publishers.cpp
src/sbg_driver/test/: conversions_test.cpp  replay_test.launch.py
src/sbg_driver_core/: CMakeLists.txt  package.xml
src/sbg_driver_core/cmake/: FetchSbgECom.cmake
src/sbg_driver_core/include/sbg/: configurator.hpp  device.hpp  error.hpp  log_view.hpp  transport.hpp  version.hpp
src/sbg_driver_core/include/sbg/detail/: c_api.hpp
src/sbg_driver_core/src/: device.cpp  error.cpp  log_view.cpp  transport.cpp
src/sbg_driver_core/test/: device_smoke_test.cpp  error_mapping_test.cpp  log_view_test.cpp  transport_config_test.cpp
src/sbg_driver_core/tools/: sbg_decode.cpp
src/sbg_msgs/: CMakeLists.txt  package.xml
src/sbg_msgs/msg/: AirDataStatus.msg  EkfStatus.msg  Event.msg  GpsRaw.msg  MagCalib.msg  ShipMotion.msg  Status.msg
